--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -5,6 +5,7 @@
   align-items: center;
   width: 100%;
   flex-grow:inherit;
+  height: 50px;
 
   margin: 0 0 30px;
   background-color: white;
@@ -21,8 +22,8 @@
   border-width: 2px;
   background-color: purple;
   margin: 10px;
-  width: 100px;
-  height: 100px;
+  width: 40px;
+  height: 40px;
 }
 
 .navLink {
@@ -30,9 +31,11 @@
   color: #f2f2f2;
   background-color: purple;
   text-align: center;
-  padding: 24px 10px;
+  /* padding: 24px 10px; */
+  padding: 5px 5px;
   text-decoration: none;
   font-size: 15px;
+  margin: 5px;
 
   /* these last two make the logout button in
   the nav bar look like another link */
@@ -47,8 +50,9 @@
 }
 
 .icon {
-  width: 100px;
-  height: 100px;
+  margin-top: 15px;
+  width: 50px;
+  height: 50px;
 }
 
 .gaming {
@@ -64,12 +68,12 @@
   justify-content: center;
   margin-left: 50px;
   text-align: center;
-  font-size: x-large;
+  font-size: medium;
 }
 
 .iconImg {
-  width: 40px;
-  height: 40px;
+  width: 20px;
+  height: 20px;
 }
 
 .menu {
