--- a/src/components/PlayerProfilePage/PlayerProfilePage.css
+++ b/src/components/PlayerProfilePage/PlayerProfilePage.css
@@ -5,7 +5,7 @@
     justify-content: flex-start;
     flex-wrap: wrap;
     background-color:darkorchid;
-    width: 700px;
+    width: 740px;
     height: 680px;
 }
 
@@ -18,9 +18,40 @@
     width: 200px;
     margin-left: 10px;
     margin-right: 10px;
-    height: 300px;
+    height: 250px;
     text-align: left;
+    padding: 10px;
+
 }
+
+.playerPlaystyleList {
+    border: solid;
+    border-color: black;
+    border-width: 3px;
+    background-color: white;
+    margin-top: 10px;
+    width: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 250px;
+    text-align: left;
+    padding: 10px;
+}
+
+.playerTimeList {
+    border: solid;
+    border-color: black;
+    border-width: 3px;
+    background-color: white;
+    margin-top: 10px;
+    width: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    height: 250px;
+    text-align: left;
+    padding: 10px;
+}
+
 
 .playerInfo {
     border: solid;
@@ -29,7 +60,7 @@
     background-color: white;
     margin-top: 10px;
     width: 200px;
-    height: 300px;
+    height: 320px;
     margin-left: 10px;
     margin-right: 300px;
     text-align: center;
