--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -33,7 +33,7 @@ Button
   border-color: #014041;
   border-width: 1px 1px 3px;
   border-radius: 4px;
-  background-color: #00acb0;
+  background-color:deepskyblue;
   color: #f8f8f8;
   font-size: 1.1rem;
   outline: 0;
@@ -56,7 +56,7 @@ Button
 }
 
 .btn:hover {
-  background-color: #008183;
+  background-color: blue;
   text-decoration: none;
 }
 
@@ -68,13 +68,13 @@ Button
   border-radius: 0;
   background: none;
   font: inherit;
-  color: #444;
+  color: white;
 }
 
 .btn_asLink:hover {
-  background-color: transparent;
-  border-color: #008183;
-  color: #008183;
+  background-color:transparent;
+  border-color: blue;
+  color: blue;
 }
 
 /* --------------------------------------------------------------------------------
@@ -102,9 +102,9 @@ Form Treatment
   max-width: 100%;
   padding: 25px;
   margin: 0 auto 20px;
-  background-color: #efefef;
+  background-color:purple;
   border-radius: 3px;
-  box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
+  /* box-shadow: 0 1px 2px darkmagenta; */
 }
 
 input {
